--- a/mysql-pma/docker-compose.yml
+++ b/mysql-pma/docker-compose.yml
@@ -6,14 +6,14 @@ volumes:
 
 networks:
     db:
-        driver: bridge
+        driver: host
 
 services:
   mariadb:
     image: mariadb:10.6
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: root
+      MYSQL_ROOT_PASSWORD: toor
       MYSQL_USER:  vito
       MYSQL_PASSWORD: 123
     expose:
