--- a/Flask/docker-compose.yml
+++ b/Flask/docker-compose.yml
@@ -1,6 +1,14 @@
 version: "3.8"
+
+networks:
+    web:
+        driver: host
+
+
 services:
   web:
     build: .
     ports:
       - "6969:6969" 
+    networks:
+      - web:
