--- a/Flask/docker-compose.yml
+++ b/Flask/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 
 networks:
-    web:
+    flasknet:
         driver: host
 
 
@@ -11,4 +11,4 @@ services:
     ports:
       - "6969:6969" 
     networks:
-      - web:
+      - flasknet:
