--- a/Flask/docker-compose.yml
+++ b/Flask/docker-compose.yml
@@ -4,11 +4,10 @@ networks:
     flasknet:
         driver: host
 
-
 services:
   web:
     build: .
     ports:
       - "6969:6969" 
     networks:
-      - flasknet:
+      flasknet:
