--- a/mysql-pma/docker-compose.yml
+++ b/mysql-pma/docker-compose.yml
@@ -1,12 +1,12 @@
 version: '3'
 
-volumes:
-  mariadb:
-    driver: local
+# volumes:
+#   mariadb:
+#     driver: local
 
-networks:
-    db:
-        driver: bridge
+# networks:
+#     db:
+#         driver: bridge
 
 services:
   mariadb:
@@ -20,10 +20,10 @@ services:
         - "3306"
     ports:
         - "3306:3306"
-    volumes:
-     - mariadb:/var/lib/mysql
-    networks:
-      db:
+    # volumes:
+    #  - mariadb:/var/lib/mysql
+    # networks:
+    #   db:
 
   phpmyadmin:
     image: phpmyadmin
@@ -35,5 +35,7 @@ services:
     environment:
       - PMA_HOST=mariadb
       - PMA_PORT=3306
-    networks:
-      db:
+    # networks:
+    #   db:
+
+  
