--- a/mysql-pma/docker-compose.yml
+++ b/mysql-pma/docker-compose.yml
@@ -20,8 +20,8 @@ services:
         - "3306"
     ports:
         - "3306:3306"
-    # volumes:
-    #  - mariadb:/var/lib/mysql
+    volumes:
+     - mariadb:/var/lib/mysql
     # networks:
     #   db:
 
