--- a/mysql-pma/docker-compose.yml
+++ b/mysql-pma/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3'
 
-volumes:
-  mariadb:
-    driver: local
+# volumes:
+#   mariadb:
+#     driver: local
 
 networks:
     db:
@@ -20,9 +20,9 @@ services:
         - "3306"
     ports:
         - "3306:3306"
-    volumes:
-     - mariadb:/var/lib/mysql
-     - mariadb:/var/lib/mysql/mysql.sock
+    # volumes:
+    #  - mariadb:/var/lib/mysql
+    #  - mariadb:/var/lib/mysql/mysql.sock
     # networks:
     #   db:
 
