--- a/mysql-pma/docker-compose.yml
+++ b/mysql-pma/docker-compose.yml
@@ -1,12 +1,12 @@
 version: '3'
 
-# volumes:
-#   mariadb:
-#     driver: local
+volumes:
+  mariadb:
+    driver: local
 
-networks:
-    db:
-        driver: bridge
+# networks:
+#     db:
+#         driver: bridge
 
 services:
   mariadb:
@@ -20,9 +20,9 @@ services:
         - "3306"
     ports:
         - "3306:3306"
-    # volumes:
-    #  - mariadb:/var/lib/mysql
-    #  - mariadb:/var/lib/mysql/mysql.sock
+    volumes:
+     - mariadb:/var/lib/mysql
+     - mariadb:/var/lib/mysql/mysql.sock
     # networks:
     #   db:
 
