--- a/mysql-pma/docker-compose.yml
+++ b/mysql-pma/docker-compose.yml
@@ -4,9 +4,9 @@ volumes:
   mariadb:
     driver: local
 
-# networks:
-#     db:
-#         driver: bridge
+networks:
+    db:
+        driver: bridge
 
 services:
   mariadb:
@@ -22,8 +22,8 @@ services:
         - "3306:3306"
     volumes:
      - mariadb:/var/lib/mysql
-    # networks:
-    #   db:
+    networks:
+      db:
 
   phpmyadmin:
     image: phpmyadmin
@@ -35,7 +35,7 @@ services:
     environment:
       - PMA_HOST=mariadb
       - PMA_PORT=3306
-    # networks:
-    #   db:
+    networks:
+      db:
 
   
